2009-03-07  Hans Breuer  <hans@breuer.org>

	* app/preferences.c(prefs_set_value_in_widget) : don't choke on 
	val==NULL and have a matching default initialization for units, 
	both fixing bug #573625
	(prefs_get_value_from_widget) : only call the props update function if
	something has changed, get rid of spurious restart message, bug #574387

	* lib/persistence.c : updating/serializing window positions had issues,
	now hopefully fixed, bug #574388

	* app/textedit_tool.c : ensure the action sensitivity is updated after
	entering textedit mode. No tool activation by entering text, bug #572307

	* app/menus.c : unique accelerators again, bug #573257

2009-03-01  Steffen Macke <sdteffen@sdteffen.de>

	* makefile.msc: Fixed typo (dia.exe was copied to dia-app.dll when doing
	"make full")
	* installer/win32/dia.nsi: Don't install Desktop shortcut. Patch from Niels
	Martin Hansen
	
2009-02-26  Steffen Macke <sdteffen@sdteffen.de>

	* po/POTFILES.in:
	* configure.in:
	* installer/win32/Makefile.am:
	* installer/win32/gennsh.c:
	* Makefile.am: Add gennsh.c, a dummy C program to create NSIS
	installer locale files. Bugzilla bug #572202

2009-02-25  Steffen Macke <sdteffen@sdteffen.de>

	* app/sheets_dialog_callbacks.c:
	* lib/libdia.def:
	* lib/sheet.c:
	* lib/dia_dirs.[ch]: Save relative path for icons in user created
	sheets; allow icon loader to fall back to system directoy if icon
	is not found in config directory; fixes bug #573027

2009-02-24  Steffen Macke <sdteffen@sdteffen.de>

	* app/sheets_dialog_callbacks.c: Write <icon> to <object> instead of
	<description>, fixes part of bug #573027

2009-02-20  Steffen Macke <sdteffen@sdteffen.de>

	* doc/en/dia.xml: Bumped revisions and dates to indicate progress
	for 0.97 release.

2009-02-19  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/dia.nsi: Include missing SISSI icons

2009-02-16  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/dia.nsi: Various small updates