@@ -9,6 +9,7 @@
 			<menuitem name="FileSaveas" action="FileSaveas" />
 			<menuitem name="FileExport" action="FileExport" />
 			<separator name="FileSep2 "/>
+			<menuitem name="DiagramProperties" action="DiagramProperties" />
 			<menuitem name="FilePagesetup" action="FilePagesetup" />
 			<menuitem name="FilePrint" action="FilePrint" />
 			<separator name="FileSep3" />
@@ -34,7 +35,6 @@
 			<menuitem name="EditCuttext" action="EditCuttext" />
 			<menuitem name="EditPastetext" action="EditPastetext" />
 			<separator name="EditSep4" />
-			<menuitem name="DiagramProperties" action="DiagramProperties" />
 			<menuitem name="DiagramLayers" action="DiagramLayers" />
 			<separator name="EditSep5" />
 			<separator name="EditExtensionStart" />
@@ -72,13 +72,20 @@
 			<separator name="ViewSep3" />
 			<separator name="ViewExtensionStart" />
 		</menu>
+		<menu name="Layers" action="Layers">
+			<menuitem name="LayerAdd" action="LayerAdd" />
+			<menuitem name="LayerRename" action="LayerRename" />
+			<separator name="LayersSep1" />
+			<menuitem name="ObjectsLayerAbove" action="ObjectsLayerAbove" />
+			<menuitem name="ObjectsLayerBelow" action="ObjectsLayerBelow" />
+			<separator name="LayersSep2" />
+			<menuitem name="DiagramLayers" action="DiagramLayers" />
+		</menu>
 		<menu name="Objects" action="Objects">
 			<menuitem name="ObjectsSendtoback" action="ObjectsSendtoback" />
 			<menuitem name="ObjectsBringtofront" action="ObjectsBringtofront" />
 			<menuitem name="ObjectsSendbackwards" action="ObjectsSendbackwards" />
 			<menuitem name="ObjectsBringforwards" action="ObjectsBringforwards" />
-			<menuitem name="ObjectsLayerAbove" action="ObjectsLayerAbove" />
-			<menuitem name="ObjectsLayerBelow" action="ObjectsLayerBelow" />
 			<separator name="ObjectsSep1" />
 			<menuitem name="ObjectsGroup" action="ObjectsGroup" />
 			<menuitem name="ObjectsUngroup" action="ObjectsUngroup" />
